tests/data/placebo/test_sg_config_patch_pitr/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "PrefixListIds": [],
            "FromPort": 0,
            "IpRanges": [],
            "ToPort": 65535,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-a08ed1dd"
              }
            ],
            "Ipv6Ranges": []
          },
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          },
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [
              {
                "CidrIp": "10.0.0.0/16"
              }
            ],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "inbound access",
        "Tags": [
          {
            "Value": "Account",
            "Key": "Scope"
          },
          {
            "Value": "blue-moon",
            "Key": "App"
          },
          {
            "Value": "Public",
            "Key": "NetworkLocation"
          }
        ],
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 8080,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "ToPort": 8080,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          },
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-a38ed1de"
              }
            ],
            "Ipv6Ranges": []
          },
          {
            "PrefixListIds": [],
            "FromPort": 15,
            "IpRanges": [],
            "ToPort": -1,
            "IpProtocol": "icmp",
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-a08ed1dd"
              }
            ],
            "Ipv6Ranges": []
          },
          {
            "PrefixListIds": [],
            "FromPort": 443,
            "IpRanges": [
              {
                "CidrIp": "10.42.1.0/24"
              }
            ],
            "ToPort": 443,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "allow-access",
        "VpcId": "vpc-72885e14",
        "OwnerId": "644160558196",
        "GroupId": "sg-a38ed1de"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "for production use only",
        "IpPermissions": [],
        "GroupName": "CUSTODIAN-PROD-ONLY-WEB-SG",
        "VpcId": "vpc-29e0314f",
        "OwnerId": "644160558196",
        "GroupId": "sg-12eeb66f"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-10eeb66d"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-29e0314f",
        "OwnerId": "644160558196",
        "GroupId": "sg-10eeb66d"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "108.56.181.242/32"
              }
            ],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-6c7fa917"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-6c7fa917"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-a08ed1dd"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-72885e14",
        "OwnerId": "644160558196",
        "GroupId": "sg-a08ed1dd"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "launch-wizard-1 created 2016-10-11T08:37:50.939-04:00",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "launch-wizard-1",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-926a56e8"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "Created from the RDS Management Console",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 3306,
            "IpRanges": [
              {
                "CidrIp": "204.63.44.147/32"
              }
            ],
            "ToPort": 3306,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "rds-launch-wizard",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-cd3d01b7"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "Created from the RDS Management Console",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 3306,
            "IpRanges": [
              {
                "CidrIp": "204.63.44.142/32"
              }
            ],
            "ToPort": 3306,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "rds-launch-wizard-1",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-314baa4c"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "Created from the RDS Management Console",
        "Tags": [
          {
            "Value": "Duper",
            "Key": "Super"
          }
        ],
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 3306,
            "IpRanges": [
              {
                "CidrIp": "199.244.214.109/32"
              }
            ],
            "ToPort": 3306,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "rds-launch-wizard-2",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-704f840d"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "SG created to test EC2 Security Group Filters",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [
              {
                "CidrIp": "204.63.44.148/32"
              }
            ],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "TEST-PROD-ONLY-SG",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-411b413c"
      }
    ],
    "ResponseMetadata": {}
  }
}
