tests/data/placebo/test_sg_config_patch_pitr/ec2.RevokeSecurityGroupEgress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "b47b7005-496f-40b3-874c-5993eb51ccca", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Wed, 14 Dec 2016 14:38:13 GMT"
            }
        }
    }
}
