tests/data/placebo/test_sg_config_patch_pitr/ec2.RevokeSecurityGroupIngress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "811dfd04-cd3f-43b0-ad06-7fb26f2ee661", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Wed, 14 Dec 2016 14:38:12 GMT"
            }
        }
    }
}
